; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/au0828/extr_au0828-input.c_au0828_rc_suspend.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/au0828/extr_au0828-input.c_au0828_rc_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.au0828_dev = type { %struct.au0828_rc* }
%struct.au0828_rc = type { i32 }

@.str = private unnamed_addr constant [13 x i8] c"Stopping RC\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @au0828_rc_suspend(%struct.au0828_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.au0828_dev*, align 8
  %4 = alloca %struct.au0828_rc*, align 8
  store %struct.au0828_dev* %0, %struct.au0828_dev** %3, align 8
  %5 = load %struct.au0828_dev*, %struct.au0828_dev** %3, align 8
  %6 = getelementptr inbounds %struct.au0828_dev, %struct.au0828_dev* %5, i32 0, i32 0
  %7 = load %struct.au0828_rc*, %struct.au0828_rc** %6, align 8
  store %struct.au0828_rc* %7, %struct.au0828_rc** %4, align 8
  %8 = load %struct.au0828_rc*, %struct.au0828_rc** %4, align 8
  %9 = icmp ne %struct.au0828_rc* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %18

11:                                               ; preds = %1
  %12 = call i32 @pr_info(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %13 = load %struct.au0828_rc*, %struct.au0828_rc** %4, align 8
  %14 = getelementptr inbounds %struct.au0828_rc, %struct.au0828_rc* %13, i32 0, i32 0
  %15 = call i32 @cancel_delayed_work_sync(i32* %14)
  %16 = load %struct.au0828_rc*, %struct.au0828_rc** %4, align 8
  %17 = call i32 @au8522_rc_clear(%struct.au0828_rc* %16, i32 224, i32 16)
  store i32 0, i32* %2, align 4
  br label %18

18:                                               ; preds = %11, %10
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @pr_info(i8*) #1

declare dso_local i32 @cancel_delayed_work_sync(i32*) #1

declare dso_local i32 @au8522_rc_clear(%struct.au0828_rc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
